error component added

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -188,4 +188,73 @@
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
+
+.error-msg {
+  height: 140px;
+  width: 270px;
+  background-color: #fafafa;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  border-radius: 20px;
+  overflow: hidden;
+  -webkit-box-shadow: 1px 1px 8px grey, -1px -1px 8px grey;
+          box-shadow: 1px 1px 8px grey, -1px -1px 8px grey;
+  -webkit-animation: show 0.5s;
+          animation: show 0.5s;
+}
+
+@-webkit-keyframes show {
+  from {
+    opacity: 0;
+    top: -200%;
+  }
+  to {
+    opacity: 1;
+    top: 50%;
+  }
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+    top: -200%;
+  }
+  to {
+    opacity: 1;
+    top: 50%;
+  }
+}
+
+.error-msg .msg {
+  padding: 1rem;
+}
+
+.error-msg #ok {
+  width: 100%;
+  height: 45px;
+  background-color: #fafafa;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  line-height: 45px;
+  text-align: center;
+  color: dodgerblue;
+  font-weight: bold;
+  border-top: 1px solid grey;
+  cursor: pointer;
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+    top: -200%;
+  }
+  to {
+    opacity: 1;
+    top: 50%;
+  }
+}
 /*# sourceMappingURL=App.css.map */
